--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="about_pic">
 
                     <div class="img">
-                        <img src="img/yash.jpg" alt="yash aher"/>
+                        <img src="img/final.jpg" alt="yash aher"/>
                     </div>
                 </div>
             </div>
